Add FlexMode to build and apply